# InventoryNotificationPackage

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml
inventory_notifications/: __init__.py  interfaces.py  notification_queue.py  sqs_client.py
tests/: test_notification_queue.py
